--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,7 @@ jobs:
         run: pip install nox
       - name: Test with pytest
         run:
-          nox -s fast-test
+          nox -s limited-test
   lint:
     name: lint
     runs-on: ubuntu-latest
