--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,14 @@ install_requires =
     torchvision
     bs4
     nox
+    scipy
+    tqdm
+    lxml
+    lightning
+    transformers
+    sklearn
+    tensorboard
+    timm
 
 python_requires = >=3.8
 
